# bench_iri

./: Cargo.toml  README.md
benches/: my_benchmark.rs
results/: index.html
results/Parse IRI reference absolute/iref/base/: estimates.json  sample.json  tukey.json
results/Parse IRI reference absolute/iref/new/: benchmark.json
results/Parse IRI reference absolute/iref/report/: index.html
results/Parse IRI reference absolute/iri-string/base/: benchmark.json  estimates.json  tukey.json
results/Parse IRI reference absolute/iri-string/new/: sample.json
results/Parse IRI reference absolute/iri-string/report/: index.html
results/Parse IRI reference absolute/oxiri/base/: tukey.json
results/Parse IRI reference absolute/oxiri/new/: benchmark.json  estimates.json  sample.json
results/Parse IRI reference absolute/oxiri/report/: index.html
results/Parse IRI reference absolute/report/: index.html
results/Parse IRI reference absolute/sophia_iri/base/: benchmark.json  estimates.json  sample.json  tukey.json
results/Parse IRI reference absolute/sophia_iri/report/: index.html
results/Parse IRI reference relative/iref/base/: estimates.json  sample.json
results/Parse IRI reference relative/iref/new/: benchmark.json  tukey.json
results/Parse IRI reference relative/iref/report/: index.html
results/Parse IRI reference relative/oxiri/base/: tukey.json  (+1 more)
results/Parse IRI reference relative/report/: index.html
results/Parse IRI/report/: index.html
results/Resolve relative IRI reference against a fixed base IRI/report/: index.html
results/report/: index.html
(+63 files in other folders)
